overflow fix in cert section

--- a/src/components/aboutPage/Certificates/Certificates.module.scss
+++ b/src/components/aboutPage/Certificates/Certificates.module.scss
@@ -33,10 +33,10 @@
 	border-radius: 20px;
 }
 
-.swiper {
+.section .swiper {
 	width: 100%;
 	display: flex;
-	overflow: hidden;
+	overflow: visible;
 }
 
 .swiperWrapper {
